--- a/Cordeus/app/src/main/AndroidManifest.xml
+++ b/Cordeus/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         <activity
             android:name=".views.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:screenOrientation="landscape"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
