--- a/Cordeus/app/src/main/AndroidManifest.xml
+++ b/Cordeus/app/src/main/AndroidManifest.xml
@@ -10,10 +10,11 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity
             android:name=".views.MainActivity"
             android:screenOrientation="landscape"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppThemeDefault" />
         <activity
             android:name=".views.VideoActivity"
             android:label="@string/app_name"
@@ -26,22 +27,22 @@
         <activity
             android:name=".views.LoginActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppThemeLogin">
+            android:theme="@style/AppThemeDefault">
         </activity>
         <activity
             android:name=".views.NewCordelActivity"
             android:label="@string/title_activity_new_cordel"
             android:screenOrientation="landscape"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppThemeDefault"></activity>
         <activity
             android:name=".views.SplashActivity"
-            android:theme="@style/AppThemeLogin">
+            android:theme="@style/AppThemeDefault">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
