--- a/Cordeus/app/src/main/AndroidManifest.xml
+++ b/Cordeus/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/logo"
+        android:icon="@drawable/icone2"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -33,7 +33,8 @@
             android:name=".views.NewCordelActivity"
             android:label="@string/title_activity_new_cordel"
             android:screenOrientation="landscape"
-            android:theme="@style/AppThemeDefault"></activity>
+            android:theme="@style/AppThemeDefault">
+        </activity>
         <activity
             android:name=".views.SplashActivity"
             android:theme="@style/AppThemeDefault">
