--- a/Cordeus/app/src/main/AndroidManifest.xml
+++ b/Cordeus/app/src/main/AndroidManifest.xml
@@ -10,7 +10,6 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity
             android:name=".views.MainActivity"
             android:screenOrientation="landscape"
@@ -23,27 +22,29 @@
         <activity
             android:name=".views.RegisterActivity"
             android:label="@string/title_activity_register"
-            android:theme="@style/AppThemeRegister"/>
+            android:theme="@style/AppThemeRegister" />
         <activity
             android:name=".views.LoginActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppThemeDefault">
-        </activity>
+            android:theme="@style/AppThemeDefault"></activity>
         <activity
             android:name=".views.NewCordelActivity"
             android:label="@string/title_activity_new_cordel"
             android:screenOrientation="landscape"
-            android:theme="@style/AppThemeDefault">
-        </activity>
+            android:theme="@style/AppThemeDefault"></activity>
         <activity
             android:name=".views.SplashActivity"
             android:theme="@style/AppThemeDefault">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity
+            android:name=".views.AboutActivity"
+            android:label="@string/title_activity_about"
+            android:theme="@style/AppThemeRegister"></activity>
     </application>
 
 </manifest>
