--- a/Cordeus/app/src/main/AndroidManifest.xml
+++ b/Cordeus/app/src/main/AndroidManifest.xml
@@ -43,6 +43,7 @@
         </activity>
         <activity
             android:name=".views.AboutActivity"
+            android:parentActivityName=".views.MainActivity"
             android:label="@string/title_activity_about"
             android:theme="@style/AppThemeRegister"></activity>
     </application>
